# Robust-Autonomy-Stack

./: ARM_MAC_USERS.md  README.md  pyproject.toml  requirements.txt  test_carla_connection.py  test_metadrive_connection.py  test_simple.py  test_window_native.py
carla_robust_autonomy_stack/adapters/: __init__.py  carla_adapter.py
carla_robust_autonomy_stack/config/: __init__.py  schema.py
carla_robust_autonomy_stack/cv/: bev_projector.py  freespace.py
carla_robust_autonomy_stack/prediction/: __init__.py  constant_velocity.py
carla_robust_autonomy_stack/utils/: replay.py  time.py
docker/: SETUP.md  compose.yml
docker/carla/: launch.sh
docker/client/: Dockerfile
robust_autonomy_stack/: __init__.py  cli.py
robust_autonomy_stack/adapters/: __init__.py  metadrive_adapter.py
robust_autonomy_stack/config/: __init__.py  schema.py
robust_autonomy_stack/control/: __init__.py  lateral.py  longitudinal.py
robust_autonomy_stack/cv/: __init__.py  lane_model.py
robust_autonomy_stack/evaluation/: __init__.py  logger.py  metrics.py  report.py
robust_autonomy_stack/planning/: __init__.py  behavior_fsm.py  collision_check.py  trajectory_sampler.py  trajectory_scoring.py
robust_autonomy_stack/prediction/: lane_intent.py
robust_autonomy_stack/safety/: __init__.py  features.py  risk_model.py  supervisor.py
robust_autonomy_stack/scenarios/: __init__.py  base.py  yaml_loader.py
robust_autonomy_stack/sensors/: __init__.py  segmentation_sensor.py  sensor_manager.py
scripts/: benchmark_suite.sh  run_scenario.sh  train_adversary.sh  train_risk_model.sh
(+6 files in other folders)
